--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "devDependencies": {
     "cypress": "^12.8.1"
   },
+  "scripts": {
+    "run-dashboard": "npx cypress run --record --spec 'cypress/e2e/spec.cy.ts'"
+  },
   "dependencies": {
     "typescript": "^5.0.2"
   }
