Updated Readme File
Updated Readme File to reflect changes and new content/instructions.
Also fixed an error where a non existing test file was being used on the record script command

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "cypress": "^12.8.1"
   },
   "scripts": {
-    "run-dashboard": "npx cypress run --record --spec 'cypress/e2e/spec.cy.ts'"
+    "run-dashboard": "npx cypress run --record --spec 'cypress/e2e/HomePage.cy.ts'"
   },
   "dependencies": {
     "typescript": "^5.0.2"
