--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
   "devDependencies": {
-    "cypress": "^12.8.1"
+    "cypress": "^12.8.1",
+    "cypress-multi-reporters": "^1.6.3",
+    "mocha-junit-reporter": "^2.2.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0"
   },
   "scripts": {
-    "run-dashboard": "npx cypress run --record --spec 'cypress/e2e/HomePage.cy.ts'"
+    "run-dashboard": "npx cypress run --record --spec 'cypress/e2e/HomePage.cy.ts'",
+    "clean": "npx rimraf cypress\\results",
+    "prereport": "npm run clean",
+    "report": "cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
+    "mochawesome:merge": "npx mochawesome-merge \"cypress/results/mochawesome/*.json\" > mochawesome.json && npx marge mochawesome.json",
+    "junit:merge":"npx junit-merge -d cypress/results/junit -o cypress/results/junit/result.xml",
+    "cypress:run": "npm run prereport && npx cypress run || exit 0",
+    "cypress:report":"npm run cypress:run && npm run junit:merge && npm run mochawesome:merge "
   },
   "dependencies": {
     "typescript": "^5.0.2"
