--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "cypress": "^12.8.1",
+    "cypress": "^13.3.3",
     "cypress-multi-reporters": "^1.6.3",
     "mocha-junit-reporter": "^2.2.0",
     "mochawesome": "^7.1.3",
@@ -13,11 +13,12 @@
     "prereport": "npm run clean",
     "report": "cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
     "mochawesome:merge": "npx mochawesome-merge \"cypress/results/mochawesome/*.json\" > mochawesome.json && npx marge mochawesome.json",
-    "junit:merge":"npx junit-merge -d cypress/results/junit -o cypress/results/junit/result.xml",
+    "junit:merge": "npx junit-merge -d cypress/results/junit -o cypress/results/junit/result.xml",
     "cypress:run": "npm run prereport && npx cypress run || exit 0",
-    "cypress:report":"npm run cypress:run && npm run junit:merge && npm run mochawesome:merge "
+    "cypress:report": "npm run cypress:run && npm run junit:merge && npm run mochawesome:merge "
   },
   "dependencies": {
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "rimraf": "^5.0.1"
   }
 }
