--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "mochawesome-report-generator": "^6.2.0"
   },
   "scripts": {
-    "run-dashboard": "npx cypress run --record --spec 'cypress/e2e/HomePage.cy.ts'",
+    "run-dashboard": "npx cypress run --record --spec 'cypress/e2e/UITests/HomePage.cy.ts'",
     "clean": "npx rimraf cypress\\results",
     "prereport": "npm run clean",
     "report": "cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
